* Fri Mar 22 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 6.1.2-0
- Use simplib::bracketize in lieu of deprecated Puppet 3 bracketize
- Fix template bug that prevented some IPv6 addresses from being
  properly formatted in /etc/hosts.allow.

* Tue Mar 19 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.2-0
- Use simplib::nets2ddq in lieu of deprecated Puppet 3 nets2ddq

* Thu Feb 14 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
- Use simplib::ipaddresses() in lieu of ipaddresses(), a deprecated
  simplib Puppet 3 function.
- Expanded the upper limit of the concat and stdlib Puppet module versions
- Fixed URLs in the README.md

* Fri Aug 24 2018 Nick Miller <nick.miller@onypoint.com> - 6.1.0-0
- Add support for Puppet 5 and OEL
- Added $package_ensure parameter
  - Changed the package from 'latest' to 'installed'
  - It will also respect `simp_options::package_ensure`

* Fri Feb 09 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.3-0
- Update upperbound on puppetlabs/concat version to < 5.0.0

* Fri Aug 18 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.2-0
- Update concat version in metadata.json & build/rpm_metadata/requires

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.1-0
- Update puppet dependency and remove OBE pe dependency in metadata.json

* Fri Dec 16 2016 Trevor Vaughan <tvaughan@onyxpoinit.com> - 6.0.0-0
- Puppet 4 update
- Added strong typing
- Converted to using puppetlabs-concat

* Wed Nov 23 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 5.0.0-0
- Fix dependancies for simp 6 bump

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.0.0-0
- Minor cleanup

* Fri Sep 30 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.0-0
- Updated to use the version of 'simpcat' that does not conflict with
  'puppetlabs/concat'.

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 3.0.0-3
- migration to simplib and simpcat (lib/ only)

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.0.0-2