@@ -5,15 +5,11 @@
 # https://puppet.com/docs/pe/2018.1/overview/getting_support_for_pe.html
 # ------------------------------------------------------------------------------
 # Release       Puppet   Ruby   EOL
-# SIMP 6.2      4.10     2.1.9  TBD
-# PE 2016.4     4.10     2.1.9  2018-12-31 (LTS)
-# PE 2017.3     5.3      2.4.4  2018-12-31
-# SIMP 6.3      5.5      2.4.4  TBD***
-# PE 2018.1     5.5      2.4.4  2020-05 (LTS)***
+# SIMP 6.3      5.5.10   2.4.5  TBD***
+# PE 2018.1.7   5.5.10   2.4.5  2020-05 (LTS)***
 # PE 2019.0     6.0      2.5.1  2019-08-31^^^
 #
 # *** = Modules created for SIMP 6.3+ are not required to support Puppet < 5.5
-# ^^^ = SIMP doesn't support 6 yet; tests are info-only and allowed to fail
 
 ---
 language: ruby
@@ -44,14 +40,11 @@ global:
   - STRICT_VARIABLES=yes
 
 jobs:
-  allow_failures:
-    - name: 'Latest Puppet 6.x (allowed to fail)'
-
   include:
     - stage: check
       name: 'Syntax, style, and validation checks'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5"
+      rvm: 2.4.5
+      env: PUPPET_VERSION="~> 5.5"
       script:
         - bundle exec rake check:dot_underscore
         - bundle exec rake check:test_file
@@ -63,42 +56,23 @@ jobs:
         - bundle exec puppet module build
 
     - stage: spec
-      name: 'Puppet 4.10 (SIMP 6.2, PE 2016.4)'
-      rvm: 2.1.9
-      env: PUPPET_VERSION="~> 4.10.0"
+      rvm: 2.4.5
+      name: 'Puppet 5.5.10 (SIMP 6.3, PE 2018.1)'
+      env: PUPPET_VERSION="5.5.10"
       script:
-        - bundle exec rake spec
+        - bundle exec rake spec_parallel
 
     - stage: spec
-      name: 'Puppet 5.3 (PE 2017.3)'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5.3.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      rvm: 2.4.4
-      name: 'Puppet 5.5 (SIMP 6.3, PE 2018.1)'
-      env: PUPPET_VERSION="~> 5.5.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      name: 'Latest Puppet 5.x'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      name: 'Latest Puppet 6.x (allowed to fail)'
+      name: 'Latest Puppet 6.x'
       rvm: 2.5.1
-      env: PUPPET_VERSION="~> 6.0"
+      env: PUPPET_VERSION="~> 6"
       script:
-        - bundle exec rake spec
+        - bundle exec rake spec_parallel
 
+    # Uncomment the following for deployment tasks and set 'secure' in both
+    # sections appropriately
     - stage: deploy
-      rvm: 2.4.4
+      rvm: 2.4.5
       script:
         - true
       before_deploy:
@@ -107,7 +81,7 @@ jobs:
       deploy:
         - provider: releases
           api_key:
-            secure: "Dc3I0xHOQwYbnnZIsor3mEN4OnzG9wnDLyYk22a63XD637Fmt1ar2YFQ+dtyL1hfbSlzpDM1SfoR2QE3xEIAeVmspNhvIXFMkv/90dBlePlaWSMxdXuCJjEkPQZkcSR1Uvoy9rDCs2se+gqfnCCbcl4t82LuayhzB9FiRbEYLRlJooKBxS90R5t5fiUDJfTWz/XLepFrPcS6J5r0rX5gRQL9HDWIi2tezcpGWaXlkrtQU8dhUCyT4nGFXalfuy/jhLOHjNR+UuB0GKzEOQR+XKFUl1i7KRuHJ+EKFYghLv9JHvdN1eOQDyyJbGJdZOEcpVu0Y0IGA/A/9XOrxQCt0ZvZbT6OdGx0eYV+RK+XKOI4UnFcor99EGYH3K6S42HgNnyYkjGdX1bSlVpIrYVpq3/WzDn+2wrBDNI4kZBypD9IRl/yboq1FSyXKWCJE4XsLH1oEDsLaWyacaACFM6T32PmrrygDpKzTjuANqdRkoodgr+nsc5tb0eo+IpXO1maXSFCmXL2hF8aXN4fXkDLmosiPIjg5axghDpOB5dp+g9Ei3FNnj9nUUy03853RML/xTXzMfNsqL7qzmhf+Am3XubBXJsUVtsn5dfZ6+9uzz6f2XvvWh51AS2gC1fOHQ994UA5rdXwN+ym0Ja1FOphuTCtde2EggNzAQnUoiNygI8="
+            secure: "CHANGE_SECURE"
           skip_cleanup: true
           on:
             tags: true
@@ -115,7 +89,7 @@ jobs:
         - provider: puppetforge
           user: simp
           password:
-            secure: "ZPktghkfg93oA1QaEaXyRPQLivzjYxdsDPQXCJQQ1qBF9djC3AecZMogM3xP3ltHdpT+5sJTqPCkiT/ZOe6qjj6xkp4qE6akuo6J9q+JxyB6JfLyeQ+LervMGZ7CX3oz7mNURpDP6ERhMiDO4G5m72N2ariqZt/uQ5hz03IW93OJ+TFUcu2xFfWQFNMWTNHX8uM5sO8YS/VhS2iZyhd0YVTQi3OymcboGRtaa8PY+QvzJSIIAEk/iE+ixbIjJ00X0OCEAVXGPHrz/Z8ZgvmkRiXpNppf8EctqCvwka/NcdQd8q4OaPmHGSaNvbIpA0LrYLBHPzLICN31QyXSF+J6cpZ+lF31eVHIpujovSdRRvLl2hh796FOmg9Cp+PqTl+kn5weKyiF+aXZer8DbPk9bRBUFLRiBpSqRZFlY2xbf8+4jYd+wVqOZTTkA0dBJjfGnHBFqKArB+j5syXxQ8IXkJj/BhsiSGPlrovP3Y6EN8gMhtPT1hgJr95urbwYF5nDHPbwkiw2iUehUomXaxWyOt6059Zw3jCh0qaAvZ+75+Yj/zm5jOpjRIQFjsUcrYopXdOHcjpvEpItaaaBADaEsbyfbu1+6ol3qXADjHfIMQ6Wl5nhzDpW9LNvWnNGmMO1NFCrtzTxXSW8GCgseYoPeRno1vovEAGdtmd2eVCQepA="
+            secure: "CHANGE_PASSWORD"
           on:
             tags: true
             condition: '($SKIP_FORGE_PUBLISH != true)'
