@@ -1,3 +1,6 @@
+* Tue Apr 23 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 6.1.3-0
+- Updated .travis.yml, .gitlab-ci.yml, .ruby-version
+
 * Fri Mar 22 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 6.1.2-0
 - Use simplib::bracketize in lieu of deprecated Puppet 3 bracketize
 - Fix template bug that prevented some IPv6 addresses from being
